# Project_FastApi_PhotoShare

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  runtime.txt
alembic/: env.py
migrations/: env.py
migrations/versions/: 02f52e6dc29e_initial_migration.py  030f4cafaaa1_initial_migration.py  04d1dff50e37_add_blackkist_table.py  0885daf98fb2_createtables.py  0ba1cb90e791_initial_migration.py  1b846aad0016_add_blackkist_table.py  285b53213253_initial_migration.py  2dc11d586ba6_initial_migration.py  382095d33c37_initial_migration.py  3f44d514464e_initial_migration.py  4fe77eb743ef_initial_migration.py  5bf09e65bb9e_initial_migration.py  7187ce6d59c6_initial_migration.py  8525057ca7e4_initial_migration.py  8b84002e2246_create_tables.py  a558ddcc98da_initial_migration.py  a787b3e2ccc3_initial_migration.py  ac5278d2d4c8_initial_migration.py  c0eae432651e_initial_migration.py  c854944f2621_initial_migration.py  ca569ed11b7a_initial_migration.py  d96d27ce9b58_initial_migration.py  deda7f762a71_initial_migration.py  f02cd884d288_initial_migration.py  f1214a2ee106_initial_migration.py  f969dac822e4_initial_migration.py  f982e7775046_initial_migration.py
src/config/: config.py  messages.py  transformations.py
src/database/: db.py  models.py
src/repository/: comment.py  crud.py  photo.py  photos.py  rating.py  tag.py  user.py  users.py
src/routes/: auth.py  comments.py  photos.py  profile.py  rating.py  search.py  tags.py  users.py
src/schemas/: auth.py  comments.py  photos.py  rating.py  search.py  tags.py  user.py  users.py
src/services/: auth.py  auth_service.py  cloudinary_service.py  email.py  qr_code_service.py  roles.py  user_services.py
tests/: test_auth.py
