[tool.poetry]
name = "goitcursova"
version = "0.1.0"
description = ""
authors = ["Group"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.8.2"}
python-dotenv = "^1.0.1"
cloudinary = "^1.41.0"
qrcode = "^7.4.2"
pytest = "^8.3.2"
alembic = "^1.13.2"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
python-jose = "^3.3.0"
fastapi-mail = "^1.4.1"
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"